2009-10-12  Hans-Peter Nilsson  <hp@axis.com>

	PR target/26515
	* gcc.dg/torture/pr26515.c: New test.

2009-10-05  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41479
	* gfortran.dg/intent_out_5.f90: New test.

2009-10-01  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41515
	* gfortran.dg/parameter_array_init_5.f90: New test.

2009-09-30  Uros Bizjak  <ubizjak@gmail.com>

	PR target/22093
	* gcc.target/alpha/pr22093.c: New test.

2009-09-23  Uros Bizjak  <ubizjak@gmail.com>

	PR c/39779
	* gcc.c-torture/compile/pr39779.c: New test.

2009-09-21  Janis Johnson  <janis187@us.ibm.com>

	PR c/41049
	* gcc.dg/dfp/pr41049.c: New test.

2009-09-18  Jack Howarth  <howarth@bromo.med.uc.edu>

	PR testsuite/41288
	* gcc.target/x86_64/abi/asm-support-darwin.s (snapshot_ret): Preserve
	stack alignment.

2009-09-16  Uros Bizjak  <ubizjak@gmail.com>

	* gfortran.dg/default_format_denormal_2.f90: Add ieee options.
	* gfortran.dg/default_format_denormal_1.f90: Ditto.  Remove
	alpha*-*-* target from XFAIL list.

2009-08-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* gcc.dg/builtins-config.h (HAVE_C99_RUNTIME): Do not define
	for FreeBSD.

2009-08-28  Uros Bizjak <ubizjak@gmail.com>

	* gfortran.dg/default_format_1.f90: Add -mieee for alpha*-*-* targets.
	* gfortran.dg/boz_12.f90: Ditto.

2009-08-28  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-08-17  Uros Bizjak  <ubizjak@gmail.com>

	* lib/target-supports.exp
	(check_effective_target_vect_cmdline_needed): Add alpha to the list
	of targets that do not need command line argument to enable SIMD.

2009-08-24  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41094
	* gcc.dg/torture/pr41094.c: New testcase.
	* gcc.dg/torture/builtin-power-1.c: Adjust.
	* gcc.dg/builtins-10.c: Likewise.

2009-08-23  Tobias Burnus  <burnus@net-b.de>

	PR fortran/40851
	* gfortran.dg/derived_init_3.f90: New test.

2009-08-23  Uros Bizjak  <ubizjak@gmail.com>

	PR target/40718
	* gcc.target/i386/pr40718.c: New test.
