@@ -1,3 +1,8 @@
+2009-10-14  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/38948
+	* gcc.dg/torture/pr38948.c: New test.
+
 2009-10-12  Hans-Peter Nilsson  <hp@axis.com>
 
 	PR target/26515
